chart tab error-handling, readme update, chart tab style lines overlap fix

--- a/app/style.css
+++ b/app/style.css
@@ -50,7 +50,7 @@
 
 }
 
-.tab-content {
+#contentOfTabs {
     background-color: inherit;
     color: rgb(255, 255, 255);
     text-align: center;
